--- a/server/.env.production
+++ b/server/.env.production
@@ -4,7 +4,7 @@ DB_USER=root
 DB_PASSWORD=Clownexe@10
 DB_NAME=presets_marketplace
 JWT_SECRET=your_jwt_secret_key_here
-NODE_ENV=development
+NODE_ENV=production
 
 DATABASE_URL=mysql://marketplace_stayglobe:bac45fe8f002004555273d317d1184971de71389@ty6acu.h.filess.io:61002/marketplace_stayglobe
 
