--- a/server/.env
+++ b/server/.env
@@ -6,11 +6,10 @@ DB_NAME=presets_marketplace
 JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
 
-DATABASE_URL=mysql://marketplace_stayglobe:bac45fe8f002004555273d317d1184971de71389@ty6acu.h.filess.io:61002/marketplace_stayglobe
-
+DATABASE_URL=mysql://marketplace_awaycanor:8f87318fbe6bf88b742553b8f7438103425e6bfb@etbssz.h.filess.io:61002/marketplace_awaycanor
 # Razorpay - Get keys from https://dashboard.razorpay.com/
-RAZORPAY_KEY_ID=rzp_test_Bnzmtr6yqG88vv
-RAZORPAY_KEY_SECRET=5xLlKoXIj4R7R6ydVWVGTpgl
+RAZORPAY_KEY_ID=rzp_live_S43Jgxr2wLTK4v
+RAZORPAY_KEY_SECRET=YlztgBxW01JAqXtK14sItlsT
 
 # Email (Gmail - Free)
 SMTP_HOST=smtp.gmail.com
