--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2",
     "razorpay": "^2.9.2",
+    "resend": "^6.7.0",
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
